// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`messages.tsx snapshots > empty inbox — headline, filter-less, first-run EmptyState 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F7F3E8",
      },
    ]
  }
>
  <View
    style={
      {
        "gap": 17,
        "paddingBottom": 12,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Fraunces_600SemiBold",
            "fontSize": 27,
            "letterSpacing": -0.3,
            "lineHeight": 31.049999999999997,
          },
          {
            "color": "#14201B",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "marginTop": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Vos conversations
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 21,
          },
          {
            "color": "#5C5748",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      Retrouvez les échanges liés à vos trajets partagés.
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "paddingBottom": 4,
        "paddingHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      accessibilityLabel="Rechercher une conversation"
      accessibilityRole="button"
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 32,
          "justifyContent": "center",
          "width": 32,
        }
      }
    >
      <Ionicons
        accessibilityElementsHidden={true}
        color="#5C5748"
        importantForAccessibility="no-hide-descendants"
        name="search-outline"
        size={20}
      />
    </TouchableOpacity>
  </View>
  <SectionList>
    <View
      accessibilityRole="text"
      accessible={true}
      style={
        {
          "alignItems": "center",
          "gap": 8,
          "padding": 20,
        }
      }
    >
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#8C8674"
          importantForAccessibility="no-hide-descendants"
          name="chatbubble-ellipses-outline"
          size={32}
        />
      </View>
      <Text
        style={
          [
            {
              "fontSize": 24,
              "fontWeight": "600",
              "lineHeight": 28.799999999999997,
            },
            {
              "color": "#26333A",
              "textAlign": "center",
              "writingDirection": "ltr",
            },
            {
              "marginTop": 4,
            },
          ]
        }
      >
        Vos trajets, au même endroit.
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            {
              "color": "#7A8288",
              "textAlign": "center",
              "writingDirection": "ltr",
            },
            {
              "marginBottom": 4,
            },
          ]
        }
      >
        Retrouvez ici les conversations liées à vos trajets partagés — avant, pendant et après le départ.
      </Text>
      <Pressable
        accessibilityLabel="Trouver un trajet"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "disabled": false,
          }
        }
        disabled={false}
        onPress={[Function]}
        style={[Function]}
      >
        <Text
          style={
            [
              {
                "fontWeight": "600",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#2E3B42",
              },
            ]
          }
        >
          Trouver un trajet
        </Text>
      </Pressable>
    </View>
  </SectionList>
</SafeAreaView>
`;

exports[`messages.tsx snapshots > error — full-screen retry EmptyState 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F7F3E8",
      },
    ]
  }
>
  <View
    style={
      {
        "gap": 17,
        "paddingBottom": 12,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Fraunces_600SemiBold",
            "fontSize": 27,
            "letterSpacing": -0.3,
            "lineHeight": 31.049999999999997,
          },
          {
            "color": "#14201B",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "marginTop": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Vos conversations
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 21,
          },
          {
            "color": "#5C5748",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      Retrouvez les échanges liés à vos trajets partagés.
    </Text>
  </View>
  <View
    accessibilityRole="text"
    accessible={true}
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "padding": 20,
      }
    }
  >
    <View
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
    >
      <Ionicons
        accessibilityElementsHidden={true}
        color="#8C8674"
        importantForAccessibility="no-hide-descendants"
        name="cloud-offline-outline"
        size={32}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 24,
            "fontWeight": "600",
            "lineHeight": 28.799999999999997,
          },
          {
            "color": "#26333A",
            "textAlign": "center",
            "writingDirection": "ltr",
          },
          {
            "marginTop": 4,
          },
        ]
      }
    >
      Impossible de charger vos messages
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#7A8288",
            "textAlign": "center",
            "writingDirection": "ltr",
          },
          {
            "marginBottom": 4,
          },
        ]
      }
    >
      Vérifiez votre connexion puis réessayez.
    </Text>
    <Pressable
      accessibilityLabel="Réessayer"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "disabled": false,
        }
      }
      disabled={false}
      onPress={[Function]}
      style={[Function]}
    >
      <Text
        style={
          [
            {
              "fontWeight": "600",
            },
            {
              "fontSize": 16,
            },
            {
              "color": "#2E3B42",
            },
          ]
        }
      >
        Réessayer
      </Text>
    </Pressable>
  </View>
</SafeAreaView>
`;

exports[`messages.tsx snapshots > loading — headline over conversation-row skeletons 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F7F3E8",
      },
    ]
  }
>
  <View
    style={
      {
        "gap": 17,
        "paddingBottom": 12,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Fraunces_600SemiBold",
            "fontSize": 27,
            "letterSpacing": -0.3,
            "lineHeight": 31.049999999999997,
          },
          {
            "color": "#14201B",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "marginTop": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Vos conversations
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 21,
          },
          {
            "color": "#5C5748",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      Retrouvez les échanges liés à vos trajets partagés.
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
        "padding": 16,
      }
    }
  >
    <Animated.View
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "backgroundColor": "#EAE7DC",
          },
          {
            "borderRadius": 16,
            "height": 92,
            "opacity": AnimatedValue {
              "value": 0.45,
            },
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <Animated.View
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "backgroundColor": "#EAE7DC",
          },
          {
            "borderRadius": 16,
            "height": 92,
            "opacity": AnimatedValue {
              "value": 0.45,
            },
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <Animated.View
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "backgroundColor": "#EAE7DC",
          },
          {
            "borderRadius": 16,
            "height": 92,
            "opacity": AnimatedValue {
              "value": 0.45,
            },
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <Animated.View
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "backgroundColor": "#EAE7DC",
          },
          {
            "borderRadius": 16,
            "height": 92,
            "opacity": AnimatedValue {
              "value": 0.45,
            },
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</SafeAreaView>
`;

exports[`messages.tsx snapshots > populated — filter chips over Aujourd'hui/Hier day sections 1`] = `
<SafeAreaView
  edges={
    [
      "top",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F7F3E8",
      },
    ]
  }
>
  <View
    style={
      {
        "gap": 17,
        "paddingBottom": 12,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Fraunces_600SemiBold",
            "fontSize": 27,
            "letterSpacing": -0.3,
            "lineHeight": 31.049999999999997,
          },
          {
            "color": "#14201B",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          {
            "marginTop": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Vos conversations
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 21,
          },
          {
            "color": "#5C5748",
            "textAlign": undefined,
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      Retrouvez les échanges liés à vos trajets partagés.
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "paddingBottom": 4,
        "paddingHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      accessibilityLabel="Rechercher une conversation"
      accessibilityRole="button"
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 32,
          "justifyContent": "center",
          "width": 32,
        }
      }
    >
      <Ionicons
        accessibilityElementsHidden={true}
        color="#5C5748"
        importantForAccessibility="no-hide-descendants"
        name="search-outline"
        size={20}
      />
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 4,
        "paddingBottom": 8,
        "paddingHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      accessibilityLabel="Tous"
      accessibilityRole="button"
      accessibilityState={
        {
          "selected": true,
        }
      }
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 9999,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#2E9E6C",
            "borderColor": "transparent",
            "borderWidth": 1,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#0D1512",
            },
          ]
        }
      >
        Tous
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityLabel="À venir"
      accessibilityRole="button"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 9999,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#EDE6D4",
            "borderWidth": 1,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#5C5748",
            },
          ]
        }
      >
        À venir
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityLabel="En cours"
      accessibilityRole="button"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 9999,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#EDE6D4",
            "borderWidth": 1,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#5C5748",
            },
          ]
        }
      >
        En cours
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityLabel="Passés"
      accessibilityRole="button"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 9999,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#EDE6D4",
            "borderWidth": 1,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#5C5748",
            },
          ]
        }
      >
        Passés
      </Text>
    </TouchableOpacity>
  </View>
  <SectionList>
    <View
      style={
        [
          {
            "paddingTop": 12,
          },
          {
            "backgroundColor": "#F7F3E8",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#8C8674",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.5,
              "paddingBottom": 4,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Aujourd'hui
      </Text>
    </View>
    <TouchableOpacity
      accessibilityLabel="Conversation avec Amine Ben Salah, Tunis vers Sousse"
      accessibilityRole="button"
      activeOpacity={0.7}
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 16,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "marginBottom": 8,
            "paddingHorizontal": 12,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#EDE6D4",
          },
          false,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "width": 8,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 4,
                "height": 8,
                "width": 8,
              },
              {
                "backgroundColor": "#2E9E6C",
              },
            ]
          }
        />
      </View>
      <View
        style={
          {
            "position": "relative",
          }
        }
      >
        <View
          accessibilityLabel="Photo de Amine Ben Salah"
          accessibilityRole="image"
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#2E3B42",
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontWeight": "600",
                },
                {
                  "color": undefined,
                  "fontSize": 19,
                },
              ]
            }
          >
            AB
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9,
                "borderWidth": 2,
                "bottom": -2,
                "height": 18,
                "justifyContent": "center",
                "position": "absolute",
                "right": -2,
                "width": 18,
              },
              {
                "backgroundColor": "#2E9E6C",
                "borderColor": "#FFFFFF",
              },
            ]
          }
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#0D1512"
            importantForAccessibility="no-hide-descendants"
            name="checkmark"
            size={16}
          />
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "gap": 2,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                [
                  {
                    "flexShrink": 1,
                    "fontWeight": "600",
                  },
                  {
                    "fontWeight": "800",
                  },
                ],
              ]
            }
          >
            Amine Ben Salah
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 18,
                },
                {
                  "color": "#2E9E6C",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "fontWeight": "700",
                },
              ]
            }
          >
            09:41
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 4,
                  "paddingHorizontal": 4,
                  "paddingVertical": 1,
                },
                {
                  "backgroundColor": "#EDE6D4",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#5C5748",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  {
                    "fontSize": 10,
                  },
                ]
              }
            >
              Conducteur
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 18,
                },
                {
                  "color": "#8C8674",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            •
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 18,
                },
                {
                  "color": "#5C5748",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            Tunis → Sousse (Demain)
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "fontWeight": "600",
              },
            ]
          }
        >
          Je passe vous prendre devant la station.
        </Text>
      </View>
    </TouchableOpacity>
    <View
      style={
        [
          {
            "paddingTop": 12,
          },
          {
            "backgroundColor": "#F7F3E8",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 21,
            },
            {
              "color": "#8C8674",
              "textAlign": undefined,
              "writingDirection": "ltr",
            },
            {
              "letterSpacing": 0.5,
              "paddingBottom": 4,
              "textTransform": "uppercase",
            },
          ]
        }
      >
        Hier
      </Text>
    </View>
    <TouchableOpacity
      accessibilityLabel="Conversation avec Salma Trabelsi, Tunis vers Hammamet"
      accessibilityRole="button"
      activeOpacity={0.7}
      onPress={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 16,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "marginBottom": 8,
            "paddingHorizontal": 12,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#EDE6D4",
          },
          {
            "opacity": 0.55,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "width": 8,
          }
        }
      />
      <View
        style={
          {
            "position": "relative",
          }
        }
      >
        <View
          accessibilityLabel="Photo de Salma Trabelsi"
          accessibilityRole="image"
          accessible={true}
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#B08A4E",
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontWeight": "600",
                },
                {
                  "color": undefined,
                  "fontSize": 19,
                },
              ]
            }
          >
            ST
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "gap": 2,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                [
                  {
                    "flexShrink": 1,
                    "fontWeight": "600",
                  },
                  false,
                ],
              ]
            }
          >
            Salma Trabelsi
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 18,
                },
                {
                  "color": "#8C8674",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                false,
              ]
            }
          >
            Hier
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 4,
                  "paddingHorizontal": 4,
                  "paddingVertical": 1,
                },
                {
                  "backgroundColor": "#EDE6D4",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  {
                    "color": "#5C5748",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  {
                    "fontSize": 10,
                  },
                ]
              }
            >
              Conducteur
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 18,
                },
                {
                  "color": "#8C8674",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            •
          </Text>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 18,
                },
                {
                  "color": "#5C5748",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            Tunis → Hammamet
          </Text>
          <Ionicons
            accessibilityElementsHidden={true}
            color="#2E9E6C"
            importantForAccessibility="no-hide-descendants"
            name="checkmark-circle"
            size={16}
          />
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#8C8674",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              false,
            ]
          }
        >
          Conversation terminée.
        </Text>
      </View>
    </TouchableOpacity>
  </SectionList>
</SafeAreaView>
`;
